--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body{
 .container{
     position: relative;
     width: 400px;
-    height: 605px;
+    height: 105px;
     background: #fff;
-    padding: 28px 32px;
+    padding: 8px 32px;
     overflow: hidden;
     border-radius: 18px;
     font-family: 'Roboto', sans-serif;
@@ -166,3 +166,19 @@ body{
     margin-top: 12px;
 }
 
+.weather-box, .weather-details{
+    scale: 0;
+    opacity: 0;
+}
+
+.fade-in{
+    animation: 0.5s fadeIn forwards;
+    animation-delay: 0.5s;
+}
+
+@keyframes fadeIn{
+    to {
+        scale: 1;
+        opacity: 1;
+    }
+}
